[package]
name = "iso_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.30"
indicatif = {version = "0.18.0"}
reqwest = {version = "0.12.7", features = ["stream"]}
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.2"

[profile.release]
lto = "fat"
